--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,9 @@
   "devDependencies": {
     "@types/node": "^17.0.8",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@notionhq/client": "^0.4.9",
+    "dotenv": "^11.0.0"
   }
 }
